public/style.css
*,
*:after,
*:before {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    height: 100%;
    position: relative;
    background: #efefef;
  
    font-family: sans-serif;
}

.widewrapper {
    background: #fff;
}

.narrowwrapper {
    background: #fff;
}

@media (min-width: 768px) {
    .widewrapper {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 80%;
        height: 1150px;
        margin: 1em auto;
        border: 4px solid #e2e2e2;
        box-shadow: 0 10px 9px -6px #c5c5c5;
        border-top-width: 25px;
        border-bottom-width: 32px;
        border-radius: 8px;
        overflow: hidden;
    }

    .narrowwrapper {
        width: 50%;
        margin: 1em auto;
        border: 4px solid #e2e2e2;
        box-shadow: 0 10px 9px -6px #c5c5c5;
        border-top-width: 25px;
        border-bottom-width: 32px;
        border-radius: 8px;
    }
}

div#calendar {
    margin: 0;
    padding: 0;
    display: block;
    width: 100%;
    background: #f3f3f3;
}

table {
    width: 100%;
    font-family: sans-serif;
    border-collapse: separate;
    border-spacing: 0;
}

.head_cal {
    background: #fff;
    color: #85baff;
    font-size: 2rem;
    line-height: 3rem;
    text-transform: uppercase;
}

.goto_today {
    padding: 15px;
    font-size: 1.25rem;
    border-radius: 5px;
    /*border: solid 1px #eee;*/
}
.goto_today:hover {
    background-color: #eee;
}

.cycle_month {
    padding: 15px;
    padding-left: 20px;
    padding-right: 20px;
    font-size: 1.25rem;
    border-radius: 50%;
    /*border: solid 1px #eee;*/
}
.cycle_month:hover {
    background-color: #eee;
}


.head_cal a {
    text-decoration: none;
    color: #85baff;
}

.week_or_month {
    display: inline-block;
    text-decoration: none;
    color: #85baff;
    font-size: 15px;
    padding-left: 10px;
    padding-right: 10px;
    margin: 10px;
    height: 1.5rem;
    line-height: 1.5rem;
}

.enabled {
    background: #e0e0e0;
    border-radius: 5px;
}

.subhead_cal {
    background: #85baff;
    color: #fff;
    font-size: 1.2rem;
    line-height: 2rem;
}

.week_cal {
    background: #fff;
    color: #d7d7d7;
    font-size: 1rem;
    line-height: 2rem;
}

.white_cal {
    background: #ececec !important;
}

tbody.table {
    table-layout: fixed;
}

.days_cal .user_listing tr td {
    background: none;
    border: none;
    text-align: left;
}

tbody.days_cal tr td a span {
    padding: 0;
    text-decoration: none;
    background: #fff;
    color: #888;
    /*min-height: 5rem;*/
    width: 100%;
    line-height: 2.0rem;
    display: block;
}

div.calendar_day {
    position: relative;
    padding: 0;
    text-decoration: none;
    color: #888;
    min-height: 7rem;
    width: 100%;
    line-height: 2.0rem;
    display: block;
    font-size: 1.25rem;
}

.days_cal .past_day_overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(245,245,245, 0.5); /* Semi-transparent color */
    z-index: 1; /* Higher z-index value to appear above the element */
    pointer-events: none;
}

tbody.days_cal tr td {
    padding: 0;
    margin: 0;
    border: 1px solid #ececec;
    text-align: center;
    width: 14.28571428571429%;
    height: auto;
    background: #fff;
    vertical-align: top;
}

.days_cal td {
    position: relative;
}

.event {
    color: #85baff !important;
    transition: all 0.1s ease;
}

tbody.days_cal .today {
    transition: all 0.1s ease;
    border: 3px solid #0069b6;
    color: #85baff !important;
}

.week_event {
    color: #85baff;
}

#calendar_data {
    margin: auto;
    padding: 0;
    top: 5%;
    left: 2%;
    width: 96%;
    min-height: 90%;
    position: fixed;

    background: #fff;
    color: #c5c5c5;
    opacity: 0;
    visibility: hidden;
    transform: scale(0, 0);
    transition: all 0.025s ease;
    border: 1px solid #dfdfdf;
    z-index: 2;
    padding-bottom: 3rem;
}

@media (min-width: 768px) {
    #calendar_data {
        position: absolute;
        top: 5%;
        left: 5%;
        width: 60%;
        max-width: 500px;
        height: 90%;
        box-shadow: 0 10px 9px -6px #c5c5c5;
    }
}

#calendar_data h4 {
    text-align: center;
    font-size: 20px;
    padding: 5px 10px;
    margin: 0;
    color: #666;
}

.data_line {
    text-align: center;
    margin: auto;
    margin-bottom: 10px;
    margin-top: 10px;
    width: 90%;
    color: #666; /* hehe */
}

.input_line {
    margin: auto;
    margin-bottom: 10px;
    margin-top: 10px;
    width: 90%;
    color: #666; /* hehe */
}

.create_event_wrapper {
    margin:auto;
    max-width:600px;
}

.input_line label {
    font-size: 15px;
    color: #666; /* hehe */
    
    margin-right: 10px;
}

.input_line input {
    width: 60%;
    float: right;
}
input.create_event {
    float: left;
    height: 2rem;
    
    width: 40%;
}
input.delete_event {
    float: right;
    height: 2rem;
    background-color: #fcc;
    border: 1px solid #700;
    border-radius: 4px;
    width: 20%;
}
input.delete_event:hover {
    background-color: #ffdddd;
    border: 1px solid #800;
}

.input_line textarea {
    width: 100%;
    max-width: 100%;
    height: 8rem;
    display: flex;
    justify-content: flex-end;
}

#calendar_data a:not(.hideEvent) {
    color: #43aeef;
    border: 0.1rem solid #43aeef;
    padding: 0.2rem 1rem;
    text-decoration: none;
}
.show_data {
    opacity: 1 !important;
    visibility: visible !important;
    transform: scale(1, 1) !important;
    transition: all 0.05s ease;
}

#calendar_data .userlist {
    margin: auto;
    margin-top: 10px;
    width: 90%;
}
#calendar_data .userlist td {
    margin: auto;
    width: 50%;
    color: #666; /* hehe */
}
#calendar_data .userlist th {
    margin: auto;
    width: 50%;
    color: #666; /* hehe */
    text-align: center;
}
/* ... */

